# APIGateway

./: .gitignore  CLAUDE.md  Dockerfile  LOG_AUDIT_PLAN.md  README.md  TODO.md  docker-compose.yml  mosquitto.conf  start.sh  前端架构设计.md  后端架构设计.md  简化架构设计.md  需求.md
backend/: .env.docker  .env.example  .gitignore  QUICKSTART.md  alembic.ini  pyproject.toml  uv-commands.md
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/docs/: ADAPTER_DESIGN_NOTES.md  FACTORY_PATTERN_DESIGN.md
backend/examples/: README.md  complete_demo.py  multi_scenario_demo.py  udp_sender.py
backend/scripts/: README.md  clean_database.py  create_all_test_data.py  create_simple_routing_rules.py  create_test_data_sources.py  create_test_routing_rules.py  create_test_target_systems.py  fix_protocol_constraints.sql  fix_scripts.py  frame_schema_examples.json  init_db.sql  manage_frame_schemas.py  migrate_routing_rules_business_oriented.sql  quick_udp_test.py  send_test_udp.py  test_udp_simple.py
backend/tests/: conftest.py  quick_api_test.py  quick_routing_test.py  quick_target_test.py  simple_db_test.py  simple_test.py  test_api_data_sources.py  test_api_encryption_keys.py  test_api_routing_rules.py  test_api_v2_integration.py  test_auth_service.py  test_crypto_service.py  test_data_pipeline.py  test_data_source_schema_refactor.py  test_database_integration.py  test_db_connection.py  test_ds_start.py  test_encryption_key_service.py  test_eventbus.py  test_forwarder_manager.py  test_frame_parser.py  test_frontend_backend_compatibility.py  test_http_adapter.py  test_http_forwarder.py  test_mqtt_adapter.py  test_mqtt_forwarder.py  test_new_features.py  test_routing_engine.py  test_target_system_schema_refactor.py  test_tcp_adapter.py  (+8 more)
(+172 files in other folders)
